--- a/scss/components/_comps.scss
+++ b/scss/components/_comps.scss
@@ -812,9 +812,9 @@
           }
 
           &:hover {
-            background: var(--control-hover-bg-color);
+            // background: var(--control-hover-bg-color);
             > a > i {
-              color: var(--control-hover-color);
+              // color: var(--control-hover-color);
             }
           }
         }
