--- a/scss/core/_reset.scss
+++ b/scss/core/_reset.scss
@@ -158,7 +158,7 @@
     a {
         margin: 0 toRem(5px);
         i {
-            color: var(--blades-white-bright);
+            // color: var(--blades-white-bright);
         }
     }
     .close {
