--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -59,7 +59,8 @@
         <div class="tab score-keys flex-vertical" data-tab="score-keys">
           <div class="keys-container full-width">
             {{#each scoreKeys }}
-              {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs" }}
+              {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs"
+              clockKey = clockKey }}
             {{/each}}
           </div>
         </div>
@@ -71,7 +72,7 @@
             {{#each pcsWithProjects as |pc|}}
               <h2>{{pc.name}}</h2>
               {{#each pc.projects as |project|}}
-                {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs" project.clockKey }}
+                {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs" clockKey = project.clockKey }}
               {{/each}}
             {{/each}}
           </div>
@@ -82,8 +83,8 @@
           <div class="keys-container full-width">
             {{#each factions as |faction|}}
               <h2>{{faction.name}}</h2>
-              {{#each faction.clocks}}
-                {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs" }}
+              {{#each faction.clocks as |clockKey|}}
+                {{> "systems/eunos-blades/templates/parts/clock-sheet-key-controls.hbs" clockKey = clockKey }}
               {{/each}}
             {{/each}}
           </div>
