--- a/templates/parts/clock-sheet-clock-controls.hbs
+++ b/templates/parts/clock-sheet-clock-controls.hbs
@@ -1,63 +1,164 @@
-<tr class="clock-row">
-  <td>
-    {{#if keyID}}
+<div class="control-flipper clock-control-flipper {{~#unless (test clockKey.isVisible "&&" clockKey.isInCurrentScene)}} controls-flipped{{/unless}}" data-clock-key-id="{{clockKey.id}}" data-clock-id="{{clock.id}}">
+
+  <div class="clock-control-panel controls-front">
+
+    {{!-- Toggle Visible --}}
     {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-      buttonClass="fa-solid fa-trash"
-      tooltip="<b>Delete Clock</b>"
-      action="delete-clock"
-      targetId=(concat keyID "-" id)
+      blockClass="clock-control-button clock-toggle-visible"
+      toggleIconKey="eye"
+      toggleIconValue=clock.isVisible
+      action="toggle-visible"
     }}
-    {{else}}
+
+    {{!-- Toggle Active --}}
     {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-      buttonClass="fa-solid fa-trash"
-      tooltip="<b>Delete Clock</b>"
-      action="delete-clock"
-      targetId=id
+      blockClass="clock-control-button clock-toggle-active"
+      toggleIconKey="bolt"
+      toggleIconValue=clock.isActive
+      action="toggle-active"
     }}
-    {{/if}}
-    {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-      cssClass="clock-toggle"
-      isToggled=clockData.isVisible
-      activeClass="fa-solid fa-eye"
-      activeTooltip="<b>Clock is Visible.</b><br>Click to hide."
-      inactiveClass="fa-thin fa-eye"
-      inactiveTooltip="<b>Clock is Hidden.</b><br>Click to display."
-      targetKey=(concat targetKeyPrefix ".isVisible") }}
 
-    {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-      cssClass="clock-toggle"
-      isToggled=clockData.isActive
-      activeClass="fa-solid fa-bell"
-      activeTooltip="<b>Clock is Active.</b><br>Click to deactivate."
-      inactiveClass="fa-regular fa-bell-slash"
-      inactiveTooltip="<b>Clock is Inactive.</b><br>Click to activate."
-      targetKey=(concat targetKeyPrefix ".isActive") }}
+    {{!-- Toggle Name Visibility --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-name-visible"
+      toggleIconKey="signature"
+      toggleIconValue=clock.isNameVisible
+      action="toggle-name-visibility"
+    }}
 
-    {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-      cssClass="clock-toggle"
-      isToggled=clockData.isHighlighted
-      activeClass="fa-solid fa-lightbulb-on"
-      activeTooltip="<b>Clock is Highlighted.</b><br>Click to fade."
-      inactiveClass="fa-light fa-lightbulb-slash"
-      inactiveTooltip="<b>Clock is Not Highlighted.</b><br>Click to highlight."
-      targetKey=(concat targetKeyPrefix ".isHighlighted") }}
+    {{!-- Toggle Highlight --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-highlight"
+      toggleIconKey="lightbulb"
+      toggleIconValue=clock.isHighlighted
+      action="toggle-highlight"
+    }}
 
-    {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-      cssClass="clock-toggle"
-      isToggled=clockData.isNameVisible
-      activeClass="fa-solid fa-tag"
-      activeTooltip="<b>Name is Visible.</b><br>Click to hide."
-      inactiveClass="fa-thin fa-tag"
-      inactiveTooltip="<b>Name is Hidden.</b><br>Click to display."
-      targetKey=(concat targetKeyPrefix ".isNameVisible") }}
-  </td>
-  <td>
-    <input type="text" class="clock-input clock-input-display" {{~#if clockData.color}} style="color: {{clockData.color}}"{{/if}} name="{{targetKeyPrefix}}.name" value="{{#if clockData}}{{clockData.name}}{{/if}}">
-  </td>
-  {{#if clockData}}
-  <td>
-    <select data-dtype="number" name="{{targetKeyPrefix}}.max">
-      {{#select clockData.max}}
+    {{!-- Name --}}
+    <input type="text" class="clock-input clock-input-name" {{~#if clock.isNameVisible}} readonly{{/if}}
+      data-target-prop="name"
+      value="{{clock.name}}"
+    />
+
+    {{!-- Adding / Removing Clock Segments --}}
+
+    {{!-- Add One Segment --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-add-segment"
+      buttonClass="fa-duotone fa-circle-three-quarters"
+      buttonStyle="--fa-primary-color: var(--blades-white); --fa-secondary-color: var(--blades-green-bright); --fa-secondary-opacity: 1;"
+      action="change-segments"
+      value="1"
+    }}
+
+    {{!-- Add Two Segments --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-add-segment"
+      buttonClass="fa-duotone fa-circle-half"
+      buttonStyle="--fa-primary-color: var(--blades-white); --fa-secondary-color: var(--blades-green-bright); --fa-secondary-opacity: 1"
+      action="change-segments"
+      value="2"
+    }}
+
+    {{!-- Add Three Segments --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-add-segment"
+      buttonClass="fa-duotone fa-circle-three-quarters fa-flip-horizontal"
+      buttonStyle="--fa-primary-color: var(--blades-green-bright); --fa-secondary-color: var(--blades-white); --fa-secondary-opacity: 1;"
+      action="change-segments"
+      value="3"
+    }}
+
+    {{!-- Remove One Segment --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-remove-segment"
+      buttonClass="fa-duotone fa-circle-three-quarters"
+      buttonStyle="--fa-primary-color: var(--blades-white); --fa-secondary-color: var(--blades-red-bright); --fa-secondary-opacity: 1;"
+      action="change-segments"
+      value="-1"
+    }}
+
+    {{!-- Remove Two Segments --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-remove-segment"
+      buttonClass="fa-duotone fa-circle-half"
+      buttonStyle="--fa-primary-color: var(--blades-white); --fa-secondary-color: var(--blades-red-bright); --fa-secondary-opacity: 1"
+      action="change-segments"
+      value="-2"
+    }}
+
+    {{!-- Remove Three Segments --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-remove-segment"
+      buttonClass="fa-duotone fa-circle-three-quarters fa-flip-horizontal"
+      buttonStyle="--fa-primary-color: var(--blades-red-bright); --fa-secondary-color: var(--blades-white); --fa-secondary-opacity: 1;"
+      action="change-segments"
+      value="-3"
+    }}
+  </div>
+
+  <div class="clock-control-panel controls-back">
+
+    {{!-- Toggle Visible --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-visible"
+      toggleIconKey="eye"
+      toggleIconValue=clock.isVisible
+      action="toggle-visible"
+    }}
+
+    {{!-- Toggle Active --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-active"
+      toggleIconKey="bolt"
+      toggleIconValue=clock.isActive
+      action="toggle-active"
+    }}
+
+    {{!-- Toggle Name Visibility --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-name-visible"
+      toggleIconKey="signature"
+      toggleIconValue=clock.isNameVisible
+      action="toggle-name-visibility"
+    }}
+
+    {{!-- Toggle Highlight --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-toggle-highlight"
+      toggleIconKey="lightbulb"
+      toggleIconValue=clock.isHighlighted
+      action="toggle-highlight"
+    }}
+
+    {{!-- Name --}}
+    <input type="text" class="clock-input clock-input-name"
+      data-target-prop="name"
+      value="{{clock.name}}"
+    />
+
+    {{!-- Color --}}
+    <select data-dtype="string" class="clock-control-select clock-select-color" data-target-prop="color" data-value="{{clock.color}}">
+      {{#select clock.color}}
+      <option data-color="yellow" value="yellow" style="background: yellow !important">📀</option>
+      <option data-color="red" value="red" style="background: red !important">🔴</option>
+      <option data-color="cyan" value="cyan" style="background: cyan !important">🔵</option>
+      <option data-color="white" value="white" style="background: white !important">🔘</option>
+      {{/select}}
+    </select>
+
+    {{!-- Value --}}
+    <select data-dtype="number" class="clock-control-select clock-select-value" data-target-prop="value" data-value="{{clock.value}}">
+      {{#select clock.value}}
+      {{#for 0 clock.max}}
+        <option value="{{this}}">{{this}}</option>
+      {{/for}}
+      {{/select}}
+    </select>
+
+    {{!-- Max --}}
+    <select data-dtype="number" class="clock-control-select clock-select-number" data-target-prop="max" data-value="{{clock.max}}">
+      {{#select clock.max}}
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
@@ -68,28 +169,13 @@
       <option value="12">12</option>
       {{/select}}
     </select>
-    <select data-dtype="string" name="{{targetKeyPrefix}}.color" data-color="{{clockData.color}}">
-      {{#select clockData.color}}
-      <option data-color="yellow" value="yellow" style="background: yellow !important">📀</option>
-      <option data-color="red" value="red" style="background: red !important">🔴</option>
-      <option data-color="cyan" value="cyan" style="background: cyan !important">🔵</option>
-      <option data-color="white" value="white" style="background: white !important">🔘</option>
-      {{/select}}
-    </select>
-  </td>
-  <td>
-    <select data-dtype="number" name="{{targetKeyPrefix}}.value">
-      {{#select clockData.value}}
-      {{#for 0 clockData.max}}
-        <option value="{{this}}">{{this}}</option>
-      {{/for}}
-      {{/select}}
-    </select>
-  </td>
-  {{/if}}
-</tr>
-<tr class="clock-row gm-notes-row">
-  <td colspan="4">
-    <textarea name="{{targetKeyPrefix}}.gm_notes" class="full-width clock-gm-notes">{{gm_notes}}</textarea>
-  </td>
-</tr>
+
+    {{!-- Delete Clock --}}
+    {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+      blockClass="clock-control-button clock-control-delete-clock"
+      buttonClass="fa-sharp fa-regular fa-circle-x"
+      action="delete-clock"
+    }}
+  </div>
+
+</div>
