--- a/scss/components/_clocks.scss
+++ b/scss/components/_clocks.scss
@@ -104,7 +104,7 @@
 
   $key-sizes: (
     1: (height: 836px, width: 230px, labelTop: 0px, clockSize: 169px),
-    2: (height: 625.438px, width: 197.009px, labelTop: 100px, clockSize: 108px),
+    2: (height: 625.438px, width: 197.009px, labelTop: 150px, clockSize: 108px),
     3: (height: 915.936px, width: 277.634px, labelTop: 0px, clockSize: 108px),
     4: (height: 1041px, width: 368.697px, labelTop: -100px, clockSize: 108px),
     5: (height: 1148.657px, width: 368.698px, labelTop: 0px, clockSize: 108px),
@@ -115,8 +115,8 @@
       0: (x: 111.011px, y: 108.5px)
     ),
     2: (
-      0: (x: 98.579px, y: 280px),
-      1: (x: 98.579px, y: 100px)
+      0: (x: 98.579px, y: 100px),
+      1: (x: 98.579px, y: 280px)
     ),
     3: (
       0: (x: 138.892px, y: 100px),
@@ -151,8 +151,8 @@
       0: (x: 0, y: 0px, align: center, width: 100%),
     ),
     2: (
-      0: (x: 0, y: 0px, align: center, width: 100%),
-      1: (x: 0, y: 325px, align: center, width: 100%),
+      0: (x: 0%, y: 90%),
+      1: (x: 100%, y: -15%),
     ),
     3: (
       0: (x: 0, y: 0px, align: center, width: 100%),
@@ -206,6 +206,25 @@
     // background: rgba(255, 0, 255, 0.25);
     // outline: 2px dotted rgb(255, 0, 255);
 
+    @each $key, $labels in $label-positions {
+      &[data-size="#{$key}"] {
+
+        .clock-key {
+          .key-image-container {
+            @each $label, $pos in $labels {
+              .clock-container:nth-of-type(#{$label + 1}) {
+                .clock-label {
+                  left: #{map-get($pos, "x")};
+                  top: #{map-get($pos, "y")};
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+
     @each $key, $clocks in $clock-positions {
       &[data-size="#{$key}"] {
         --key-height: #{map-get(map-get($key-sizes, $key), "height")};
@@ -241,23 +260,21 @@
 
       .key-label {
         font-family: var(--font-emphasis);
-        font-size: toRem(48px);
+        font-size: 48px;
+        line-height: 48px;
         font-weight: bold;
         text-transform: uppercase;
+        text-align: center;
         letter-spacing: 1px;
         top: var(--label-top);
         z-index: 20;
-        width: 200%;
-        pointer-events: all;
+        width: max-content;
         color: var(--blades-white-bright);
         text-shadow:
-          0 0 15px var(--blades-black-dark),
-          0 0 15px var(--blades-black-dark),
-          0 0 15px var(--blades-black-dark),
-          0 0 15px var(--blades-black-dark);
-        white-space: nowrap;
-        // rotate: -30deg;
-        left: -50%;
+          0 0 10px var(--blades-black-dark),
+          0 0 10px var(--blades-black-dark);
+        white-space: balance;
+        left: 50%;
         position: absolute;
       }
 
@@ -328,17 +345,19 @@
 
       .clock-label {
         position: absolute;
-        transform: translate(-50%, -50%);
-        top: 50%;
-        left: 50%;
+        transform: translate(-50%, 0%);
+        // top: 50%;
+        // left: 50%;
         z-index: 5;
         font-size: 24px;
         font-family: var(--font-emphasis-narrow);
         font-weight: bold;
         color: var(--blades-white-bright);
         text-shadow: var(--text-shadow-dark-strong);
-        text-align: center;
+        // text-align: center;
         white-space: nowrap;
+        width: max-content;
+        height: auto;
       }
 
       .clock-frame { z-index: 3; }
